<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue_500">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="20dp"
        android:paddingTop="20dp"
        android:paddingBottom="100dp">

        <ImageView
            android:id="@+id/iv_logo"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/logo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/txt_isi_biodata"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/arlrdbd"
            android:text="@string/txt_edit_biodata"
            android:textAlignment="center"
            android:textColor="@color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iv_logo" />

        <EditText
            android:id="@+id/et_nik"
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/bg_button_white"
            android:fontFamily="@font/arlrdbd"
            android:hint="@string/txt_nik"
            android:inputType="numberDecimal"
            android:paddingStart="14dp"
            android:textColor="@color/blue_500"
            android:textColorHint="@color/blue_200"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txt_isi_biodata"
            tools:ignore="RtlSymmetry" />

        <EditText
            android:id="@+id/et_nama_lengkap"
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/bg_button_white"
            android:fontFamily="@font/arlrdbd"
            android:hint="@string/txt_nama_lengkap"
            android:inputType="numberDecimal"
            android:paddingStart="14dp"
            android:textColor="@color/blue_500"
            android:textColorHint="@color/blue_200"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/et_nik"
            tools:ignore="RtlSymmetry" />

        <EditText
            android:id="@+id/et_tempat_lahir"
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/bg_button_white"
            android:fontFamily="@font/arlrdbd"
            android:hint="@string/txt_tempat_lahir"
            android:inputType="numberDecimal"
            android:paddingStart="14dp"
            android:textColor="@color/blue_500"
            android:textColorHint="@color/blue_200"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/et_nama_lengkap"
            tools:ignore="RtlSymmetry" />

        <LinearLayout
            android:id="@+id/ll_tgl_lahir"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/et_tempat_lahir">

            <EditText
                android:layout_width="0dp"
                android:layout_height="25dp"
                android:layout_weight="1"
                android:background="@drawable/bg_button_white"
                android:fontFamily="@font/arlrdbd"
                android:hint="@string/txt_dd"
                android:textAlignment="center"
                android:textColorHint="@color/blue_200"
                android:textSize="15sp" />

            <EditText
                android:layout_width="0dp"
                android:layout_height="25dp"
                android:layout_marginHorizontal="10dp"
                android:layout_weight="2"
                android:background="@drawable/bg_button_white"
                android:fontFamily="@font/arlrdbd"
                android:hint="@string/txt_month"
                android:textAlignment="center"
                android:textColorHint="@color/blue_200"
                android:textSize="15sp" />

            <EditText
                android:layout_width="0dp"
                android:layout_height="25dp"
                android:layout_weight="1"
                android:background="@drawable/bg_button_white"
                android:fontFamily="@font/arlrdbd"
                android:hint="@string/txt_year"
                android:textAlignment="center"
                android:textColorHint="@color/blue_200"
                android:textSize="15sp" />
        </LinearLayout>

        <EditText
            android:id="@+id/et_jenis_kelamin"
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/bg_button_white"
            android:fontFamily="@font/arlrdbd"
            android:hint="@string/txt_jenis_kelamin"
            android:inputType="numberDecimal"
            android:paddingStart="14dp"
            android:textColor="@color/blue_500"
            android:textColorHint="@color/blue_200"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ll_tgl_lahir"
            tools:ignore="RtlSymmetry" />

        <EditText
            android:id="@+id/et_alamat"
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/bg_button_white"
            android:fontFamily="@font/arlrdbd"
            android:hint="@string/txt_alamat"
            android:inputType="numberDecimal"
            android:paddingStart="14dp"
            android:textColor="@color/blue_500"
            android:textColorHint="@color/blue_200"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/et_jenis_kelamin"
            tools:ignore="RtlSymmetry" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/ly_password"
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:background="@drawable/bg_button_white"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/et_email">

            <EditText
                android:id="@+id/et_password"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="4"
                android:background="@drawable/bg_button_white"
                android:fontFamily="@font/arlrdbd"
                android:hint="Password"
                android:inputType="textPassword"
                android:paddingStart="14dp"
                android:textColor="@color/blue_500"
                android:textColorHint="@color/blue_200"
                android:textSize="15sp"
                tools:ignore="RtlSymmetry" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/img_hide_pass"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:paddingHorizontal="6dp"
                app:srcCompat="@drawable/ic_baseline_visibility_blue" />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <!--        <EditText-->
        <!--            android:id="@+id/et_password"-->
        <!--            android:layout_width="match_parent"-->
        <!--            android:layout_height="25dp"-->
        <!--            android:fontFamily="@font/arlrdbd"-->
        <!--            android:textColor="@color/blue_500"-->
        <!--            android:textColorHint="@color/blue_200"-->
        <!--            android:paddingStart="14dp"-->
        <!--            android:textSize="15sp"-->
        <!--            app:layout_constraintStart_toStartOf="parent"-->
        <!--            app:layout_constraintEnd_toEndOf="parent"-->
        <!--            app:layout_constraintTop_toBottomOf="@id/et_email"-->
        <!--            android:layout_marginTop="10dp"-->
        <!--            android:inputType="textPassword"-->
        <!--            android:hint="Password"-->
        <!--            android:background="@drawable/bg_button_white"-->
        <!--            tools:ignore="RtlSymmetry" />-->

        <EditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/bg_button_white"
            android:fontFamily="@font/arlrdbd"
            android:hint="@string/txt_email_2"
            android:inputType="textEmailAddress"
            android:paddingStart="14dp"
            android:textColor="@color/blue_500"
            android:textColorHint="@color/blue_200"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/et_alamat"
            tools:ignore="RtlSymmetry" />

        <EditText
            android:id="@+id/et_no_telp"
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/bg_button_white"
            android:fontFamily="@font/arlrdbd"
            android:hint="@string/txt_no_telepon"
            android:inputType="textEmailAddress"
            android:paddingStart="14dp"
            android:textColor="@color/blue_500"
            android:textColorHint="@color/blue_200"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ly_password"
            tools:ignore="RtlSymmetry" />

        <EditText
            android:id="@+id/et_kode_pos"
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/bg_button_white"
            android:fontFamily="@font/arlrdbd"
            android:hint="@string/txt_kode_pos"
            android:inputType="textEmailAddress"
            android:paddingStart="14dp"
            android:textColor="@color/blue_500"
            android:textColorHint="@color/blue_200"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/et_no_telp"
            tools:ignore="RtlSymmetry" />

        <EditText
            android:id="@+id/et_kabupaten"
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/bg_button_white"
            android:fontFamily="@font/arlrdbd"
            android:hint="@string/txt_kabupaten"
            android:inputType="textEmailAddress"
            android:paddingStart="14dp"
            android:textColor="@color/blue_500"
            android:textColorHint="@color/blue_200"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/et_kode_pos"
            tools:ignore="RtlSymmetry" />

        <EditText
            android:id="@+id/et_kecamatan"
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/bg_button_white"
            android:fontFamily="@font/arlrdbd"
            android:hint="@string/txt_kecamatan"
            android:inputType="textEmailAddress"
            android:paddingStart="14dp"
            android:textColor="@color/blue_500"
            android:textColorHint="@color/blue_200"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/et_kabupaten"
            tools:ignore="RtlSymmetry" />

        <EditText
            android:id="@+id/et_kelurahan"
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/bg_button_white"
            android:fontFamily="@font/arlrdbd"
            android:hint="@string/txt_kelurahan"
            android:inputType="textEmailAddress"
            android:paddingStart="14dp"
            android:textColor="@color/blue_500"
            android:textColorHint="@color/blue_200"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/et_kecamatan"
            tools:ignore="RtlSymmetry" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/et_kelurahan">

            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_marginEnd="10dp"
                android:layout_weight="2"
                android:background="@drawable/bg_button_white"
                android:drawableStart="@drawable/ic_logo_kamera"
                android:fontFamily="@font/arlrdbd"
                android:paddingHorizontal="24dp"
                android:text="@string/txt_unggah_foto"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="@color/blue_200"
                tools:ignore="RtlSymmetry" />

            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_weight="1"
                android:background="@drawable/bg_button_white"
                android:text="@string/txt_update"
                android:textAllCaps="false"
                android:textColor="@color/blue_500" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>