<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/blue_500">

    <ImageView
        android:id="@+id/iv_logo"
        android:layout_width="180dp"
        android:layout_height="100dp"
        android:layout_marginTop="70dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:src="@drawable/logo"/>

    <TextView
        android:id="@+id/tv_attention"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:textAlignment="textStart"
        android:fontFamily="@font/arlrdbd"
        android:layout_marginHorizontal="40dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_logo"
        android:textColor="@color/white"
        android:gravity="center"
        android:text="@string/txt_attention"
        tools:ignore="RtlCompat" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/et_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginHorizontal="40dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_attention"
        android:hint="@string/txt_email"
        android:textColor="@color/white"
        android:textColorHint="@color/blue_200"
        android:fontFamily="@font/arlrdbd"
        android:backgroundTint="@color/white"
        android:inputType="textEmailAddress"
        tools:ignore="LabelFor" />

<!--    <TextView-->
<!--        android:id="@+id/tv_forgot"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        app:layout_constraintTop_toBottomOf="@id/ly_password"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        android:layout_marginEnd="40dp"-->
<!--        android:fontFamily="@font/arlrdbd"-->
<!--        android:textColor="@color/blue_200"-->
<!--        android:text="@string/txt_forgot_pass"/>-->

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/ly_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="40dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_email"
        android:layout_weight="1">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et_password"
            android:layout_width="0dp"
            android:layout_weight="4"
            android:layout_height="wrap_content"
            android:hint="@string/txt_sandi"
            android:textColor="@color/white"
            android:textColorHint="@color/blue_200"
            android:fontFamily="@font/arlrdbd"
            android:backgroundTint="@color/white"
            android:inputType="textPassword"
            tools:ignore="LabelFor" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/img_hide_pass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingHorizontal="6dp"
            android:layout_gravity="center"
            app:srcCompat="@drawable/ic_baseline_visibility"/>

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/bt_masuk"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:background="@drawable/bg_button_white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/txt_masuk"
        android:fontFamily="@font/arlrdbd"
        android:textColor="@color/blue_500"
        android:layout_marginTop="40dp"
        android:textAllCaps="false"
        app:layout_constraintTop_toBottomOf="@id/ly_password"/>

    <TextView
        android:id="@+id/tv_no_akun"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_blm_punya_akun"
        android:fontFamily="@font/arlrdbd"
        android:textColor="@color/blue_200"
        android:layout_marginTop="60dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bt_masuk"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/bt_daftar"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:background="@drawable/bg_button_white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/txt_daftar"
        android:fontFamily="@font/arlrdbd"
        android:textColor="@color/blue_500"
        android:layout_marginTop="20dp"
        android:textAllCaps="false"
        app:layout_constraintTop_toBottomOf="@id/tv_no_akun"/>
</androidx.constraintlayout.widget.ConstraintLayout>